# dothi-model-main

./: .gitignore  README.md  pyproject.toml
src/dothi_nursery/: __init__.py  app.py  cli.py  model.py  plotting.py
tests/: test_model.py
