[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dothi-nursery"
version = "0.1.0"
description = "Shiny for Python app modelling Dothistroma spread and control in a forest nursery"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "RSE Sheffield" }]
keywords = ["shiny", "epidemiology", "dothistroma", "simulation", "forestry"]
dependencies = [
    "numpy>=1.23",
    "matplotlib>=3.6",
    "shiny>=0.10",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
dothi-nursery = "dothi_nursery.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dothi_nursery"]
